src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Agent_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent/Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Agent_Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <label>Assigned To Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure_Link__c</fullName>
        <formula>Property__r.Brochure_Link__c</formula>
        <label>Brochure Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Value__c</fullName>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Actual__c</fullName>
        <label>Practical Completion Date (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Forecast__c</fullName>
        <label>Practical  Completion Date (Forecast)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Reference__c</fullName>
        <label>Concept Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Costs_Required_By__c</fullName>
        <label>Costs Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Feedback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Feedback</label>
        <referenceTo>Customer_Feedback__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_send_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t send feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <formula>Property__r.Google_Maps_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicative_Programme_Length__c</fullName>
        <label>Indicative Programme Duration (Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructed_Amount__c</fullName>
        <label>Instructed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Mobile__c</fullName>
        <formula>Lead__r.MobilePhone</formula>
        <label>Lead Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>Property__r.Portfolio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <formula>Property__r.Post_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image_URL__c</fullName>
        <formula>Property__r.Property_Image_Link_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Property__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation_Amount__c</fullName>
        <label>Quotation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <label>Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snagging_Completion_Date__c</fullName>
        <label>Snagging Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time_Text__c</fullName>
        <formula>TEXT( DAY(  ActivityDate  ) ) &amp; &quot;/&quot; &amp; TEXT( MONTH( ActivityDate ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( ActivityDate  ) ) &amp;  &quot; &quot; &amp; MID( TEXT(ActivityDateTime), 12,5)</formula>
        <label>Start Date Time Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_On_Site_Date__c</fullName>
        <label>Start On Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Complete__c</fullName>
        <label>Status Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Design</fullName>
                </value>
                <value>
                    <fullName>Developed Design</fullName>
                </value>
                <value>
                    <fullName>Technical Design</fullName>
                </value>
                <value>
                    <fullName>Budget Cost Plan</fullName>
                </value>
                <value>
                    <fullName>Cost Plan</fullName>
                </value>
                <value>
                    <fullName>Pre-Tender Cost Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Updated_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine if event status was updated via sms or email</description>
        <label>Status Updated By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Did Not Attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Design__c</fullName>
        <label>Status of Design</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concept (Stage 2)</fullName>
                </value>
                <value>
                    <fullName>Developed Design (Stage 3)</fullName>
                </value>
                <value>
                    <fullName>Technical Design (Stage 4)</fullName>
                </value>
                <value>
                    <fullName>On-site (Stage 5)</fullName>
                </value>
                <value>
                    <fullName>Handover (Stage 6)</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suite_Sq_ft__c</fullName>
        <label>Suite Sq ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Code__c</fullName>
        <description>It&apos;s a system field (not for users). When a task for approval is created, the field will be populated with hidden task details. If the task is accepted or rejected, we will catch the field to determine if it&apos;s a task created by system or just a task created by a user.</description>
        <label>System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <formula>Case(Status,
 &quot;Open&quot;, IMAGE(&quot;/resource/TaskStatusInProgress&quot;, &quot;In Progress&quot;, 25, 25),
 &quot;Completed&quot;, IMAGE(&quot;/resource/TaskStatusCompleted&quot;, &quot;Completed&quot;, 25, 25),
 &quot;Rejected&quot;, IMAGE(&quot;/resource/TaskStatusRejected&quot;, &quot;Completed&quot;, 25, 25), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Completed__c</fullName>
        <label>Task Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewing_Arranged_by__c</fullName>
        <defaultValue>&quot;Sales&quot;</defaultValue>
        <label>Viewing Arranged by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Agent_Broker</fullName>
                    <label>Agent/Broker</label>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>Building Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewing_Conducted_by_User_Phone_Number__c</fullName>
        <formula>Viewing_Conducted_by_User__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Conducted by User Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Conducted_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewing Conducted by User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewing_Conducted_by__c</fullName>
        <defaultValue>&quot;Sales&quot;</defaultValue>
        <label>Viewing Conducted by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Agent_Broker</fullName>
                    <label>Agent/Broker</label>
                </value>
                <value>
                    <fullName>Building Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewing_Id__c</fullName>
        <label>Viewing Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Link__c</fullName>
        <formula>IF(ISBLANK(Viewing_Id__c),
    &quot;&quot;,
    IF($User.UIThemeDisplayed = &quot;Theme4d&quot;,
        HYPERLINK(&quot;#/sObject/&quot; &amp; Viewing_Id__c &amp; &quot;/view&quot;, Viewing_Name__c, &quot;_self&quot;),
        HYPERLINK(&quot;/&quot; &amp; Viewing_Id__c, Viewing_Name__c, &quot;_self&quot;)
    )
)</formula>
        <label>Viewing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Name__c</fullName>
        <label>Viewing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__EventReminderConfiguration__c</fullName>
        <label>EventReminderConfiguration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>